--- a/views/dashboard-task.pug
+++ b/views/dashboard-task.pug
@@ -6,7 +6,7 @@ append head
 div.checkbox-container
     div(class="checkbox grid-square")
         input(type="checkbox")
-    div.task-options
+    div(class="task-options")
         div(class="split-3")
             p(class="tool-tip") Complete Task
             div(class="completed grid-square")
