--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -1,4 +1,4 @@
-body {
+main {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
@@ -33,7 +33,6 @@ body {
     flex-direction: row;
     justify-content:flex-start;
     align-items: center;
-    position:absolute;
     width: 90%;
     height: 90%;
 }
