--- a/public/stylesheets/task-animation.css
+++ b/public/stylesheets/task-animation.css
@@ -6,10 +6,10 @@
 }
 
 .task-options{
-    visibility: hidden;
     display: flex;
     margin: 0 25px;
     width: 100%;
+    visibility: hidden
 }
 
 .split-3 {
@@ -110,3 +110,14 @@
         background: white;
     }
 }
+
+@keyframes fadeIn {
+    from { opacity: 0; }
+    to { opacity: 1; }
+}
+
+@keyframes fadeOut {
+    0% { opacity: 1;}
+    99% { opacity: 0.01;width: 100%; height: 100%;}
+    100% { opacity: 0;width: 0; height: 0;}
+}  
