--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -97,6 +97,9 @@ h1 {
     width: 100%;
     height: 100%;
     clip-path: circle(0% at 0 50%);
+    /* The clip-path CSS property creates a clipping region that sets 
+    what part of an element should be shown. Parts that are inside the region 
+    are shown, while those outside are hidden. */
 }
 
 .carousel .slide.active{
