refactored decorateTaskWithDeadline, decorateTaskWithPriority functions so they return objects instead of doing an appendChild action at the end. refactored changeDeadline so it replaces the old span element with a new one instead of removing then re-appending. implemented changePriority functionality for task summary panel.

--- a/public/stylesheets/summary.css
+++ b/public/stylesheets/summary.css
@@ -36,7 +36,8 @@
 }
 
 #deadline-div,
-#list-div {
+#list-div,
+#priority-div {
     display: flex;
     align-items: center;
 }
@@ -66,6 +67,7 @@ textarea.summary-inp {
 
 #summary-deadline,
 #summary-list,
+#summary-priority,
 #summary-desc {
     padding: 10px 3px;
     flex-basis: 20%;
