Changed name from Priorities to Priority in left sidebar

--- a/views/dashboard-list.pug
+++ b/views/dashboard-list.pug
@@ -40,7 +40,7 @@ block content
             div.lists
                 div.list-header-container
                     i.fas.fa-caret-right
-                    div.list-header Priorities
+                    div.list-header Priority
                     //- div.add-list-button(role='button')
                     //-     i.far.fa-plus-square
                 div#task-categories.list-container
