--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -38,6 +38,12 @@ body {
     background-color: var(--tertiary-color);
 }
 
+#container {
+    display: grid;
+    grid-template-rows: 46px 1fr; /* first arg must be the same height as the #header div */
+    height: 100%;
+}
+
 /* header block */
 #header {
     /* display: flex; */
@@ -62,7 +68,7 @@ body {
     display: grid;
     grid-template-columns: 200px 1fr 10px 1fr;
     height: 100%;
-    padding: 10px 5px;
+    padding: 10px 5px 0;
 }
 
 #sidebar {
@@ -71,7 +77,7 @@ body {
 
 #main {
     position: relative;
-    padding: 20px;
+    padding: 20px 20px 0;
     height: 100%;
     background-color: #ffffff;
     border-radius: 5px 5px 0 0;
