--- a/public/stylesheets/search.css
+++ b/public/stylesheets/search.css
@@ -3,10 +3,30 @@
 }
 
 .search-button {
-    display: inline-block;
+    display: none;
+    /* visibility: hidden; */
     margin: 10px;
 }
 
+#search-form {
+    display: flex;
+    position: relative;
+    /* justify-content: center; */
+}
+
+.fa-search {
+    z-index: 50;
+    align-self: center;
+    justify-self: center;
+    /* right: 100px; */
+    left: 470px;
+    /* top: 19px; */
+    /* color: #ffffff00; */
+    color: rgb(197, 197, 197);
+    position: fixed;
+    /* border: red 1px solid; */
+
+}
 
 .search-container {
     position: relative;
@@ -15,7 +35,7 @@
 .search-recommendations {
     top: 48px;
     display: none;
-    position: absolute;
+    position: fixed;
     z-index: 10;
     box-shadow: 0 1px 4px 1px rgb(0 0 0 / 20%);
 }
