--- a/public/stylesheets/search.css
+++ b/public/stylesheets/search.css
@@ -18,14 +18,9 @@
     z-index: 50;
     align-self: center;
     justify-self: center;
-    /* right: 100px; */
     left: 470px;
-    /* top: 19px; */
-    /* color: #ffffff00; */
-    color: rgb(197, 197, 197);
+    color: rgb(221, 220, 220);
     position: fixed;
-    /* border: red 1px solid; */
-
 }
 
 .search-container {
@@ -47,4 +42,14 @@
     background: white;
     font-size: 13px;
     border-radius: 3px;
+}
+
+.search {
+    background-color: rgb(51, 121, 193);
+    border: rgb(51, 121, 193) solid 1px;
+}
+
+.search-selected {
+    background-color: white;
+    /* max-width: 294px; */
 }
