--- a/views/dashboard-list.pug
+++ b/views/dashboard-list.pug
@@ -8,7 +8,7 @@ block content
         div.left-header
         div.search-container
             form#search-form(for='search')
-                +plainField('', 'search', '', null, 'Search task')
+                +plainField('', 'search', '', null, '')
                 span.fas.fa-search.fa-lg
 
                 span.serach-button-container
