made the task summary change priority when changing on both task summary or task options

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -198,3 +198,11 @@
 .priority-Low {
     background-color: rgb(36, 206, 169);
 }
+
+.logout:hover{
+    background-color: #032c61;
+}
+
+.logout:active{
+    background-color: #03162f;
+}
