--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -21,14 +21,12 @@
     height: inherit;
 }
 
-#add-task-input input.inp-field {
-    background-color: white;
-}
 
 .add-task-button {
     align-self: flex-end;
     margin-top: -40px;
     transition: all 0.4s;
+    z-index: -1;
 }
 
 .add-task-button button {
