today's tasks list is selected and opened by default on page load

--- a/views/dashboard-list.pug
+++ b/views/dashboard-list.pug
@@ -23,7 +23,7 @@ block content
             div#sidebar
                 div.sidebar-logo
                 div.lists
-                    div.list-header-container
+                    div.list-header-container.inbox-header
                         i.fas.fa-caret-right
                         div.list-header Inbox
                         div
@@ -32,7 +32,7 @@ block content
                         div#tomorrow.inbox-list Tomorrow's Tasks
                         div#all.inbox-list All Tasks
                 div.lists
-                    div.list-header-container
+                    div.list-header-container.lists-header
                         i.fas.fa-caret-right
                         div.list-header Lists
                         div.add-list-button.add-list-button-l(role='button')
@@ -40,7 +40,7 @@ block content
                     div#task-lists.list-container
 
                 div.lists
-                    div.list-header-container
+                    div.list-header-container.priorities-header
                         i.fas.fa-caret-right
                         div.list-header Priorities
                     div#task-categories.list-container
