--- a/views/dashboard-list.pug
+++ b/views/dashboard-list.pug
@@ -31,6 +31,7 @@ block content
                         div#today.inbox-list Today's Tasks
                         div#tomorrow.inbox-list Tomorrow's Tasks
                         div#all.inbox-list All Tasks
+                        div#completed.inbox-list Completed Tasks
                 div.lists
                     div.list-header-container.lists-header
                         i.fas.fa-caret-right
