search icon can be clicked to fetch searches. Icon is highlightable only after searchbox has been clicked on.

--- a/public/stylesheets/search.css
+++ b/public/stylesheets/search.css
@@ -53,3 +53,7 @@
     background-color: white;
     /* max-width: 294px; */
 }
+
+.search-selected.fa-search:hover {
+    color:rgb(51, 121, 193)
+}
