--- a/views/home.pug
+++ b/views/home.pug
@@ -22,6 +22,9 @@ block content
                         a(href="/login") Log in
                     li(class="signup")
                         a(href="/signup") Sign up for free
+            div#demo-user
+                a(href="/demo/login") Demo User
+
         div.header-content
             h1 Just Moo it.
             div.carousel
