added animation to list dropdown arrows

--- a/public/stylesheets/sidebar.css
+++ b/public/stylesheets/sidebar.css
@@ -98,12 +98,14 @@ ol li {
     background-color: white;
     z-index: 3;
     box-shadow: 0 1px 4px 1px rgb(0 0 0 / 20%);
-    border-radius: 3px;
+    border-radius: 5px;
 }
 
 .list-edit-option {
     width: 100%;
-    padding-left: 4px;
+    padding-left: 8px;
+    /* border: 1px solid #a5c9e7; */
+    border-radius: 3px;
 }
 
 /* .add-list-button {
@@ -116,9 +118,23 @@ ol li {
 .fa-caret-square-down {
     z-index: 10;
 }
+/*
+.fa-caret-right {
+    width: 17px;
+} */
 
 .fa-caret-right {
     width: 17px;
+    transform: rotate(0deg);
+    transition: 0.2s linear;
+    transform-origin: 5% 40%;
+}
+
+.fa-caret-down {
+    transform: rotate(90deg);
+    transition: 0.2s linear;
+    /* margin-right: 10px; */
+    transform-origin: 5% 40%;
 }
 
 .fa-plus-square {
