fixed few bugs and updated the links for github & linkedin pages

--- a/views/home.pug
+++ b/views/home.pug
@@ -60,9 +60,9 @@ block content
                     h4 Christy
                     ul
                         li
-                            a(href="#") Linkedin
+                            a(href="https://www.linkedin.com/in/christywchen/") Linkedin
                         li
-                            a(href="#") Github
+                            a(href="https://github.com/christywchen") Github
                         li
                             a(href="#") Instagram
                 div(class="haozhen person")
@@ -71,25 +71,25 @@ block content
                         li
                             a(href="#") Linkedin
                         li
-                            a(href="#") Github
+                            a(href="https://github.com/Haozhen-Shu") Github
                         li
                             a(href="#") Instagram
                 div(class="justin person")
                     h4 Justin
                     ul
                         li
-                            a(href="#") Linkedin
+                            a(href="https://www.linkedin.com/in/jstnswn/") Linkedin
                         li
-                            a(href="#") Github
+                            a(href="https://github.com/jstnswn") Github
                         li
                             a(href="#") Instagram
                 div(class="peter person")
                     h4 Peter
                     ul
                         li
-                            a(href="#") Linkedin
+                            a(href="https://www.linkedin.com/in/petershin731") Linkedin
                         li
-                            a(href="#") Github
+                            a(href="https://github.com/PeterShinnn") Github
                         li
                             a(href="#") Instagram
         div.copyright
