--- a/views/user-login.pug
+++ b/views/user-login.pug
@@ -7,22 +7,7 @@ append head
   link(rel="stylesheet" href="/stylesheets/team.css")
 
 block content
-    header
-        div.navbar-container
-            div.navbar
-                a(href='/' class="moogo")
-                    img(src='images/logo-o-light.png', alt="cow-on-computer" id="logo")
-                ul
-                    li
-                        a(href="/") Home
-                    li
-                        a(href="/upgrade") Upgrade
-                    li
-                        a(href="/team") Meet the team
-                    li
-                        a(href="/login") Log in
-                    li(class="signup")
-                        a(href="/signup") Sign up for free
+    include splash-navbar.pug
     main
         div#login_main
             div.errMsg(hidden)
@@ -44,50 +29,6 @@ block content
                             button(type='submit') Log In
                                 if !errors
                                     a(href='/dashboard')
-                            button(type='submit')
-                                a(href="/signup") Don't have an account? Sign Up
-    footer
-        div.social-container
-            div.social-links
-                div(class="christy person")
-                    h4 Christy
-                    ul
-                        li
-                            a(href="#") Linkedin
-                        li
-                            a(href="#") Github
-                        li
-                            a(href="#") Instagram
-                div(class="haozhen person")
-                    h4 Haozhen
-                    ul
-                        li
-                            a(href="#") Linkedin
-                        li
-                            a(href="#") Github
-                        li
-                            a(href="#") Instagram
-                div(class="justin person")
-                    h4 Justin
-                    ul
-                        li
-                            a(href="#") Linkedin
-                        li
-                            a(href="#") Github
-                        li
-                            a(href="#") Instagram
-                div(class="peter person")
-                    h4 Peter
-                    ul
-                        li
-                            a(href="#") Linkedin
-                        li
-                            a(href="#") Github
-                        li
-                            a(href="#") Instagram
-        div.copyright
-            p &copy; Copyright 2021 To Moo List
-            a(href="#") Terms
-            a(href="#") Privacy
-            a(href="#") Security
-            script(src="/javascripts/errors.js" type="module")
+                    p.signup-cta
+                        a(href="/signup") Don't have an account? Sign Up
+    include splash-footer.pug
