removed demo user link from nav bar.

--- a/views/splash-navbar.pug
+++ b/views/splash-navbar.pug
@@ -7,7 +7,7 @@ header
                 li
                     a(href="/") Home
                 li
-                    a(href="/upgrade") Demo
+                    a(href="/upgrade") Upgrade
                 li
                     a(href="/team") Meet the team
                 li
