debugged some issues with highlighting and task summary visibility. still working on creating new list from task summaries.

--- a/public/stylesheets/utils.css
+++ b/public/stylesheets/utils.css
@@ -34,3 +34,11 @@ textarea,
 input {
     font-family: Helvetica, Arial, sans-serif;
 }
+
+.checkbox-container input[type="checkbox"] {
+    margin: 0 auto !important;
+}
+
+.checkbox-container input {
+    margin-top: 4px;
+}
