--- a/public/stylesheets/task-animation.css
+++ b/public/stylesheets/task-animation.css
@@ -5,11 +5,11 @@
     align-items: center;
 }
 
-.task-options{
+.task-options {
     display: flex;
     margin: 0 25px;
     width: 100%;
-    visibility: hidden
+    visibility: hidden;
 }
 
 .split-3 {
@@ -17,7 +17,7 @@
     margin: 0 10px;
 }
 
-.delete{
+.delete {
     margin-left: 25px;
 }
 
@@ -40,7 +40,7 @@
     height: auto;
     position: absolute;
     z-index: 2;
-    top: 5.6%;
+    top: 49px;
     border: 1px solid lightgray;
     box-shadow: 10px 5px 5px lightgray;
     margin-left: 128px;
@@ -64,15 +64,15 @@
     background-color: var(--lightest-div-bg);
 }
 
-.dropdown input{
+.dropdown input {
     padding: 0 auto;
 }
 
-.dropdown input::placeholder{
+.dropdown input::placeholder {
     font-size: 12px;
 }
 
-.tool-tip{
+.tool-tip {
     position: absolute;
     visibility: hidden;
     margin-top: 40px;
@@ -80,16 +80,15 @@
     color: black;
 }
 
-
 @keyframes growDown {
     0% {
-      transform: scaleY(0)
+        transform: scaleY(0);
     }
     80% {
-      transform: scaleY(1.1)
+        transform: scaleY(1.1);
     }
     100% {
-      transform: scaleY(1)
+        transform: scaleY(1);
     }
 }
 
@@ -112,12 +111,26 @@
 }
 
 @keyframes fadeIn {
-    from { opacity: 0; }
-    to { opacity: 1; }
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
 }
 
 @keyframes fadeOut {
-    0% { opacity: 1;}
-    99% { opacity: 0.01;width: 100%; height: 100%;}
-    100% { opacity: 0;width: 0; height: 0;}
-}  
+    0% {
+        opacity: 1;
+    }
+    99% {
+        opacity: 0.01;
+        width: 100%;
+        height: 100%;
+    }
+    100% {
+        opacity: 0;
+        width: 0;
+        height: 0;
+    }
+}
