--- a/public/stylesheets/sidebar.css
+++ b/public/stylesheets/sidebar.css
@@ -27,11 +27,10 @@ li {
     /* min-height: 500px; */
 }
 
-
 .list-item,
 .category-item,
 .inbox-list {
-    padding-left: 12px;
+    padding-left: 17px;
     color: rgb(66, 64, 64)
 }
 
@@ -39,8 +38,6 @@ li {
     color: #0060bf;
     font-weight: bold;
 }
-
-
 
 .inbox-list:hover,
 .list-edit-option:hover,
@@ -68,6 +65,7 @@ ol li {
 .list-header {
     /* padding-left: 4px; */
     justify-self: start;
+    padding-left: 3px;
 }
 
 .sidebar-box {
@@ -128,14 +126,16 @@ ol li {
     width: 17px;
     transform: rotate(0deg);
     transition: 0.2s linear;
-    transform-origin: 5% 40%;
+    transform-origin: 35% 40%;
+    padding-left: 5px;
 }
 
 .fa-caret-down {
     transform: rotate(90deg);
     transition: 0.2s linear;
     /* margin-right: 10px; */
-    transform-origin: 5% 40%;
+    transform-origin: 35% 40%;
+    /* padding-left: 50px; */
 }
 
 .fa-plus-square {
