--- a/public/stylesheets/task-animation.css
+++ b/public/stylesheets/task-animation.css
@@ -91,7 +91,7 @@
 }
 
 .list-of-lists{
-    margin-left: 116px;
+    margin-left: 21px;
 }
 
 .list-of-tags{
@@ -101,9 +101,21 @@
 .tool-tip {
     position: absolute;
     visibility: hidden;
-    margin-top: 40px;
+    margin-bottom: 75px;
+    font-size: 16px;
     z-index: 4;
-    color: black;
+    width: 90px;
+    height: 40px;
+    color: white;
+    /* text-align: center; */
+    background-color: black;
+    display: flex;
+    align-items: center; /* Vertical center alignment */
+    justify-content: center; /* Horizontal center alignment */
+}
+
+.grid-square:hover span{
+    visibility: visible;
 }
 
 @keyframes growDown {
