--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -66,7 +66,7 @@ body {
 #content {
     display: grid;
     grid-template-columns: 200px 1fr 10px 1fr;
-    height: 100%;
+    height: 90%;
     padding: 10px 5px 0;
 }
 
@@ -78,6 +78,7 @@ body {
     position: relative;
     padding: 20px 20px 0;
     height: 100%;
+    /* height: 90vh; */
     background-color: #ffffff;
     border-radius: 5px 5px 0 0;
     z-index: 5;
