scrollbar is now invisible

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -54,6 +54,10 @@
     padding-bottom: 80px;
 }
 
+::-webkit-scrollbar {
+    width: 0px;
+    background: transparent; 
+}
 
 #tasksContainer div {
     padding: 0 3px;
