--- a/views/user-signup.pug
+++ b/views/user-signup.pug
@@ -35,6 +35,6 @@ block content
                             button(type='submit') Sign Up
                                 if !errors
                                     a(href='/dashboard')
-                    p.login-cta
-                        a(href="/login") Already have an account? Log in
+                    p.login-signup-cta
+                        a(class='login-signup-link' href="/login") Already have an account? Log in
     include splash-footer.pug
