relinked errors.js to login and signup pug pages.

--- a/views/user-login.pug
+++ b/views/user-login.pug
@@ -31,4 +31,5 @@ block content
                                     a(href='/dashboard')
                     p.login-signup-cta
                         a(class='login-signup-link' href="/signup") Don't have an account? Sign Up
+    script(src="/javascripts/errors.js" type="module")
     include splash-footer.pug
