--- a/views/user-signup.pug
+++ b/views/user-signup.pug
@@ -37,4 +37,5 @@ block content
                                     a(href='/dashboard')
                     p.login-signup-cta
                         a(class='login-signup-link' href="/login") Already have an account? Log in
+    script(src="/javascripts/errors.js" type="module")
     include splash-footer.pug
