converted all instances of 'category' to 'priority'

--- a/views/dashboard-list.pug
+++ b/views/dashboard-list.pug
@@ -44,7 +44,7 @@ block content
                     div.list-header-container.priorities-header
                         i.fas.fa-caret-right
                         div.list-header Priority
-                    div#task-categories.list-container
+                    div#task-priorities.list-container
 
             div#main
                 div#add-task
