--- a/views/dashboard-task.pug
+++ b/views/dashboard-task.pug
@@ -24,7 +24,7 @@ div.checkbox-container
                 span(class="tool-tip") Change List
                 i(class="fas fa-list-alt drop-square")
                 div(class="list-of-lists dropdown" style='display: none')
-            div(class="category grid-square drop-square")
+            div(class="priority grid-square drop-square")
                 span(class="tool-tip") Priority
                 i(class="fas fa-exclamation")
                 div(class="list-of-tags dropdown" style='display: none')
