--- a/public/stylesheets/team.css
+++ b/public/stylesheets/team.css
@@ -35,6 +35,7 @@
 
 .about-left {
     align-self: center;
+    /* align-self will override a grid or flex's align-items' value */
     width: 45%;
 }
 
