changed tooltip opacity.

--- a/public/stylesheets/task-animation.css
+++ b/public/stylesheets/task-animation.css
@@ -110,7 +110,7 @@
     width: fit-content;
     height: 28px;
     color: white;
-    background-color: #6d7174c2;
+    background-color: #828283;
     display: flex;
     align-items: center; /* Vertical center alignment */
     justify-content: center; /* Horizontal center alignment */
